[package]
name = "match-template"
version = "1.0.0"
edition = "2018"
description = "match-template is a procedural macro that generates repeated match arms by pattern."
license = "Apache-2.0"
repository = "https://github.com/tisonkun/match-template"
keywords = ["macro", "pattern-match"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "1", features = ["full", "extra-traits", "fold"] }
